--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
