--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-is": "^19.2.3",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
