--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -35,6 +36,7 @@
     "react-is": "^19.2.3",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.0.6",
     "zod": "^4.2.1"
   },
   "devDependencies": {
